# Lexio

./: .env  .env.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  config.py  logging.py  main.py
app/api/: __init__.py  deps.py  router.py
app/api/v1/: __init__.py  enhance.py  preview.py  profile.py
app/core/: __init__.py  boundary.py  pipeline.py  strategy.py  stress.py
app/llm/: __init__.py  base.py  local.py  openai.py
app/parsing/: __init__.py  difficulty.py  semantic.py  sentence.py
app/profile/: __init__.py  repository.py  schema.py  updater.py
app/schemas/: __init__.py  request.py  response.py
app/storage/: __init__.py  postgres.py  redis.py
app/utils/: metrics.py
